# AquaCore

./: .gitignore
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 2026_05_01_0953-32b9035a433e_add_column_tags_to_diseases.py  2026_05_06_2300-da4f1bf8714b_make_article_fields_nullable.py  2026_05_09_0054-b70629cd5270_add_column_is_approve_to_artile.py  2026_05_09_0248-a7b33a6a9a4b_remove_column_is_approve_to_artile.py  2026_05_09_0345-3ba641c07ad2_create_usergallery_table.py  2026_05_11_2235-ab97a4a42e46_create_userdiary_table.py  2026_05_11_2238-b7a8f3719290_change_status_column_in_article_table.py  2026_05_11_2324-57e77feb7230_alter_column_crated_at_in_userdairy.py  2026_05_12_0115-eca4ab069105_create_species_table.py  2026_05_12_0131-7196ad76663e_add_column_type_to_species.py  2026_05_12_1147-c2c6a8d4b13b_add_table_aquariuminhabitant.py  2026_05_12_1304-3c934bca14be_add_table_watertest.py  2026_05_12_1536-7f4444a305fc_create_tables_tasks_and_equipment.py  2026_05_14_1900-194a0f60c826_add_reset_code_and_reset_code_expire_to_.py  2026_05_18_1206-fc78046e07cf_add_specifications_column_to_equipment_.py  2026_05_18_1217-80b485e96567_add_new_table_equipment_logs.py  2026_05_18_1220-78480333075b_add_new_table_equipment_logs.py  2026_05_18_1432-c88279efc450_add_new_table_water_change_logs.py  2026_05_19_2052-c743beef8b3b_add_new_table_water_change_logs.py  2026_05_20_0040-85b75c102081_delete_cover_image_in_article_categories.py  (+11 more)
backend/load_testing/: docker-compose.yml  locustfile.py  nginx.conf
backend/src/: main.py
(+341 files in other folders)
