[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Serge Kozlov",email = "serge.kozlov.dev@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (==4.2.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "cloudinary (>=1.44.2,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi-mail (==1.4.1)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
